refactor: additional tests